[project]
name = "comfyui-previewlatent"
description = "a ComfyUI plugin for previewing latents without vae decoding. Useful for showing intermediate results and can be used a faster 'preview image' if you don't wan't to use vae decode."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/martijnat/comfyui-previewlatent"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-previewlatent"
Icon = ""
